HelloUltraviolet/Fixtures/RejectedSource/Expressions/AsyncCompositionDiagnosticsTable/Expected.uv
//! Expected diagnostic metadata for the AsyncCompositionDiagnosticsTable rejected-source specimen.

expectedDiagnostic("E-CON-0260", "diagnostics.21.AsyncCompositionDiagnostics")
